force-app/main/default/objects/Counsellor_Reports__c/Counsellor_Reports__c.object-meta.xml
<CustomObject>
    <label>Counsellor Reports</label>
    <nameField>
        <label>Counsellor Reports Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Counsellor Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>