force-app/main/default/objects/Counsellor_Reports__c/fields/Confidential_Notes__c.field-meta.xml
<CustomField>
    <fullName>Confidential_Notes__c</fullName>
    <label>Confidential Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>