force-app/main/default/objects/Counsellor_Reports__c/fields/Creator_is_Me__c.field-meta.xml
<CustomField>
    <fullName>Creator_is_Me__c</fullName>
    <formula>$User.Id =  CreatedBy.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Creator is Me</label>
    <type>Checkbox</type>
</CustomField>