force-app/main/default/objects/Counsellor_Reports__c/fields/Cycle__c.field-meta.xml
<CustomField>
    <fullName>Cycle__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cycle</label>
    <referenceTo>Cycle__c</referenceTo>
    <relationshipLabel>Counsellor Reports</relationshipLabel>
    <relationshipName>Counsellor_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>