force-app/main/default/objects/Counsellor_Reports__c/recordTypes/Confidential_Reports.recordType-meta.xml
<RecordType>
    <fullName>Confidential_Reports</fullName>
    <active>true</active>
    <label>Confidential Reports</label>
</RecordType>