force-app/main/default/objects/Counsellor_Reports__c/recordTypes/Public_Reports.recordType-meta.xml
<RecordType>
    <fullName>Public_Reports</fullName>
    <active>true</active>
    <label>Public Reports</label>
</RecordType>